CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2 FATAL_ERROR)
project(lepcapy)

SET(LEPCAPY_VERSION_MAJOR 0)
SET(LEPCAPY_VERSION_MINOR 3)

SET(CMAKE_VERBOSE_MAKEFILE ON)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF(NOT CMAKE_BUILD_TYPE)

ADD_DEFINITIONS(-DCALIB_CFG_BUILD_MODE="${CMAKE_BUILD_TYPE}")

ADD_DEFINITIONS(-DCALIB_CFG_OS="${CMAKE_SYSTEM_NAME}" -DCALIB_CFG_CPU="${CMAKE_SYSTEM_PROCESSOR}")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -mavx2 -mrtm")
FIND_PACKAGE(Threads REQUIRED)

IF(APPLE)
    SET(CMAKE_MACOSX_RPATH ON)
ENDIF()

ADD_SUBDIRECTORY(lepcapy)
